Fixed: align-self for header__lang-link element

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,11 @@
 .header__lang-link {
-  margin: auto;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
   color: #fff;
+  align-self: flex-end;
 }
 
 .header__lang-link:hover {
